--- a/js/package.json
+++ b/js/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "./src/app.js",
   "dependencies": {
-    "foris": "beta"
+    "foris": "3.1.1"
   },
   "peerDependencies": {
     "prop-types": "15.7.2",
@@ -14,35 +14,29 @@
     "react-dom": "16.9.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "@testing-library/react": "^8.0.9",
-    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-polyfill": "^6.26.0",
-    "css-loader": "^3.0.0",
-    "eslint": "^6.1.0",
+    "css-loader": "^3.4.1",
+    "eslint": "^6.8.0",
     "eslint-config-reforis": "^1.0.0",
-    "immutability-helper": "3.0.1",
-    "jest": "^24.8.0",
-    "jest-mock-axios": "^3.0.0",
-    "moment-timezone": "^0.5.25",
+    "jest": "^24.9.0",
+    "jest-mock-axios": "^3.2.0",
+    "moment-timezone": "^0.5.27",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "snapshot-diff": "^0.5.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "watch": "webpack --watch --mode=development --env.lighttpd",
-    "build": "webpack --mode=production --env.lighttpd",
+    "watch": "webpack --watch --mode=development",
+    "build": "webpack --mode=production",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "test": "jest",
