--- a/js/package.json
+++ b/js/package.json
@@ -6,12 +6,13 @@
   "description": "",
   "main": "./src/app.js",
   "dependencies": {
-    "foris": "3.1.1"
+    "foris": "3.4.0"
   },
   "peerDependencies": {
     "prop-types": "15.7.2",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "react-router-dom": "5.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -30,6 +31,7 @@
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-router-dom": "5.1.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
