--- a/js/package.json
+++ b/js/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "./src/app.js",
   "dependencies": {
-    "foris": "3.4.0",
+    "foris": "^4.5.0",
     "minimist": "^1.2.5"
   },
   "peerDependencies": {
