--- a/js/package.json
+++ b/js/package.json
@@ -29,10 +29,13 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-reforis": "^1.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^25.1.0",
     "jest-mock-axios": "^3.2.0",
     "moment-timezone": "^0.5.28",
+    "prettier": "^2.3.2",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
