--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,25 @@
-image: python:3.7-slim-stretch
+image: registry.nic.cz/turris/reforis/reforis/reforis-image
 
 stages:
-  - test
+    - test
 
 before_script:
-  - apt-get update && apt-get -y install sudo make curl git
-  - make prepare-env && make prepare-dev
+    - apt-get update && apt-get -y install sudo make curl git
+    - make prepare-dev
 
 test:
-  stage: test
-  script:
-    - make test
+    stage: test
+    script:
+        - make test
+
+test-js-build:
+    stage: test
+    script:
+        - cd js
+        - npm install
+        - npm run-script build -- -o /tmp/app.min.js
 
 lint:
-  stage: test
-  script:
-    - make lint
+    stage: test
+    script:
+        - make lint
