--- a/js/package.json
+++ b/js/package.json
@@ -7,45 +7,44 @@
     },
     "license": "GPL-3.0",
     "version": "1.0.0",
-    "description": "reForis Remote Wi-Fi Settings Plugin",
+    "description": "reForis Remote Wi-Fi Settings Plugin allows managing Wi-Fi remotely from another Turris router.",
     "main": "./src/app.js",
     "eslintConfig": {
         "extends": "eslint-config-reforis"
     },
     "dependencies": {
-        "foris": "^5.1.14",
+        "foris": "^5.6.1",
         "minimist": "^1.2.5"
     },
     "peerDependencies": {
-        "prop-types": "15.7.2",
+        "prop-types": "^15.8.1",
         "react": "16.9.0",
         "react-dom": "16.9.0",
         "react-router-dom": "5.1.2"
     },
     "devDependencies": {
-        "@babel/cli": "^7.12.13",
-        "@babel/core": "^7.8.7",
-        "@babel/plugin-transform-runtime": "^7.8.3",
-        "@babel/preset-env": "^7.9.0",
-        "@babel/preset-react": "^7.8.3",
+        "@babel/cli": "^7.23.9",
+        "@babel/core": "^7.23.9",
+        "@babel/plugin-transform-runtime": "^7.23.9",
+        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-react": "^7.23.3",
         "@testing-library/react": "^8.0.9",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.4.2",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-reforis": "^1.0.0",
-        "eslint-plugin-prettier": "^3.4.0",
+        "eslint": "^8.56.0",
+        "eslint-config-reforis": "^2.1.0",
         "jest": "^25.1.0",
         "jest-mock-axios": "^3.2.0",
-        "moment-timezone": "^0.5.28",
+        "moment-timezone": "^0.5.45",
         "prettier": "^2.3.2",
-        "prop-types": "15.7.2",
+        "process": "^0.11.10",
+        "prop-types": "^15.8.1",
         "react": "16.9.0",
         "react-dom": "16.9.0",
         "react-router-dom": "5.1.2",
         "style-loader": "^0.23.1",
-        "webpack": "^4.42.0",
-        "webpack-cli": "^3.3.11"
+        "webpack": "^5.90.2",
+        "webpack-cli": "^5.1.4"
     },
     "scripts": {
         "watch": "webpack --watch --mode=development",
