Update CI to use shared scripts, build and publish python package

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,16 @@
-image: registry.nic.cz/turris/reforis/reforis/reforis-image
-
 stages:
-    - test
+  - lint
+  - test
+  - build
+  - publish
 
-before_script:
-    - apt-get update && apt-get -y install sudo make curl git
-    - make prepare-dev
+include:
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/base.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/make/reforis.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/build_and_publish.yml"
 
-test:
-    stage: test
-    script:
-        - make test
 
-test-js-build:
-    stage: test
-    script:
-        - cd js
-        - npm install
-        - npm run-script build -- -o /tmp/app.min.js
-
-lint:
-    stage: test
-    script:
-        - make lint
+build::python:
+  parallel:
+    matrix:
+      - IMAGE: ["registry.nic.cz/turris/foris-ci/reforis-ci"]
