Update .gitignore to exclude Ruff cache files

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,6 @@ venv.bak/
 reforis_static/reforis_remote_wifi_settings/js/*.min.js
 reforis_static/reforis_remote_wifi_settings/js/*.LICENSE
 reforis_static/reforis_remote_wifi_settings/js/*.txt
+
+## Ruff
+.ruff_cache/
