--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reforis-remote-wifi-settings"
-version = "2.1.0"
+version = "2.2.0"
 description = "reForis Remote Wi-Fi Settings plugin allows managing Wi-Fi remotely from another Turris router."
 readme = "README.md"
 license = "GPL-3.0-or-later"
@@ -21,43 +21,24 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
 ]
-dependencies = [
-    "Babel",
-    "flask",
-    "Flask-Babel",
-    "reforis",
-]
+dependencies = ["Babel", "flask", "Flask-Babel", "reforis"]
 
 [project.optional-dependencies]
-devel = [
-    "pytest",
-    "ruff",
-    "werkzeug",
-]
+devel = ["pytest", "ruff", "werkzeug"]
 
 [project.entry-points."foris.plugins"]
 reforis_remote_wifi_settings = "reforis_remote_wifi_settings:remote_wifi_settings"
 
 [tool.hatch.build.targets.sdist]
-include = [
-    "/js",
-    "/reforis_remote_wifi_settings",
-    "/reforis_static",
-]
+include = ["/js", "/reforis_remote_wifi_settings", "/reforis_static"]
 
 [tool.hatch.build.targets.wheel.hooks.reforis]
 dependencies = ["hatch-reforis"]
 reforis_module = "reforis_remote_wifi_settings"
 
 [tool.hatch.build.targets.wheel]
-include = [
-    "/reforis_remote_wifi_settings",
-    "/reforis_static",
-]
-exclude = [
-    "**/*.po",
-    "**/*.pot",
-]
+include = ["/reforis_remote_wifi_settings", "/reforis_static"]
+exclude = ["**/*.po", "**/*.pot"]
 
 [tool.ruff]
 line-length = 120
